# SRM-SVM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GPU_ACCELERATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TRAINING_GUIDE.md  WORKFLOW_GUIDE.md  example_run.py  monitor_training.py  pyproject.toml  requirements.txt  run.bat  setup.cfg  setup_validation.py  test_imports.py
scripts/: infer.py  train.py  train_batch_optimal.py  train_fast.py  train_improved.bat  train_improved.py  train_minimal.py  train_optimal.py  train_simple.py  train_single_ultimate.py  train_ultrafast.py  validate_training_ready.py
src/: __init__.py
src/steganalysis/: __init__.py
src/steganalysis/utils/: evaluation.py
tests/: conftest.py  test_dataset.py  test_patches.py  test_sparse_coding.py
